# Zotan

./: .gitignore  Containerfile  pyproject.toml
scripts/: report_packages_space.py  setup_explorer_context.ps1
zotan/: cli.py  config.py  context_manage.py  firefox.py  functional.py  text.py  toml.py  types_.py
zotan/skills/ast-grep/: SKILL.md
zotan/skills/ast-grep/references/: README.md
zotan/skills/web-research/: SKILL.md
zotan/spin/: session.py  supervisor.py  tool_exec.py
zotan/tools/: bash_tools.py  delegate_tools.py  file_tools.py  http_tools.py  rich_file_tools.py  serper_tools.py
zotan/ui/: one_round.py  terminal.py
